# the_assets

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
deploy/: install-nginx-assets-review.sh  nginx-assets-review.conf  the-assets-review-api.service  the-assets-review-app.service
docs/: portrait-pipeline.md
portrait-review/: review.json
portrait-review/favorites/11013487/: estate-pixel-claimant-v1:4152053981.json
portrait-review/favorites/22609495/: estate-pixel-claimant-v1:2294087723.json
portrait-review/favorites/23024613/: estate-pixel-claimant-v1:3675960969.json
portrait-review/favorites/30051167/: estate-pixel-claimant-v1:3615601749.json
src/: main.tsx
src/styles/: app.css
src/ui/: App.tsx
tests/: test_portraits.py
tools/: __init__.py
tools/portraits/: __init__.py  cli.py  imaging.py  img2img.py  lookbook.py  manifest.py  pexels.py  presets.txt  review_server.py
tools/portraits/palettes/: estate-neutral.json
tools/portraits/presets/: estate-pixel-claimant-v1.json
